[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "id3-tag-album-artist"
version = "0.1.0"
description = "Copy album artist to artist field, preserving featured artist info in the title."
requires-python = ">=3.8"
dependencies = ["mutagen>=1.47"]

[project.scripts]
id3-tag-album-artist = "id3_tag_album_artist:main"

[tool.setuptools]
py-modules = ["id3_tag_album_artist"]
